--- a/ELS pricing.ipynb
+++ b/ELS pricing.ipynb
@@ -113,6 +113,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "49b42cd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'asset_price' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43masset_price\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'asset_price' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "asset_price['Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "id": "fd955955",
    "metadata": {},
