--- a/ELS pricing.ipynb
+++ b/ELS pricing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "id": "61bd0757",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "id": "fa7fe574",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dongjun\\AppData\\Local\\Temp\\ipykernel_1016\\2085601013.py:6: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "C:\\Users\\Dongjun\\AppData\\Local\\Temp\\ipykernel_27848\\2085601013.py:6: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  asset_price = yf.download(asset, start=startdate, end=enddate)\n",
       "[*********************100%***********************]  1 of 1 completed"
      ]
@@ -113,29 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "49b42cd7",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'asset_price' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43masset_price\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mClose\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'asset_price' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "asset_price['Close']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "fd955955",
    "metadata": {},
    "outputs": [],
@@ -159,7 +137,7 @@
     "        # 아래 시작일과 종료일 입력받아서 종가 데이터 입수\n",
     "        asset_price = yf.download(self.ticker, start=startdate, end=enddate)\n",
     "        # 종가 데이터를 통한 일일 변화율 산출(dropna 로 null 값 제거)\n",
-    "        asset_returns = asset_price[\"Close\"].pct_change().dropna()\n",
+    "        asset_returns = asset_price[\"Close\"].squeeze().pct_change().dropna()\n",
     "        # 변화율 데이터를 이용한 표준편차 계산\n",
     "        asset_vol = np.std(asset_returns)\n",
     "        return asset_vol\n",
@@ -191,7 +169,7 @@
     "        return nextvalue\n",
     "    \n",
     "         # 주가경로를 최종적으로 만들어내는 함수\n",
-    "    def Get_StochasticStockProcess(self, maxno: int, rfr: int, assetvol: int, timeunit: int, datelist):\n",
+    "    def Get_StochasticStockProcess(self, maxno: int, rfr: int, assetvol: float, timeunit: int, datelist):\n",
     "        # 빈 데이터프레임 만들기: 단위 데이터 프레임을 합칠 전체 데이터 프레임\n",
     "        totdf = pd.DataFrame()\n",
     "        # 변수로 받은 시뮬레이션횟수(maxno)만큼 시나리오 만들기\n",
@@ -362,55 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "23790008",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Dongjun\\AppData\\Local\\Temp\\ipykernel_1016\\2476800888.py:18: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  asset_price = yf.download(self.ticker, start=startdate, end=enddate)\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "c:\\ProgramData\\anaconda3\\envs\\finance\\lib\\site-packages\\numpy\\_core\\fromnumeric.py:4062: FutureWarning: The behavior of DataFrame.std with axis=None is deprecated, in a future version this will reduce over both axes and return a scalar. To retain the old behavior, pass axis=0 (or do not pass axis)\n",
-      "  return std(axis=axis, dtype=dtype, out=out, ddof=ddof, **kwargs)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1016\\2855656416.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m terminationdates = [\"2024-06-05\", \"2024-12-04\", \"2025-06-04\", \"2025-12-04\"\\\n\u001b[0;32m     11\u001b[0m                 , \"2026-06-05\", \"2026-12-04\"]\n\u001b[0;32m     12\u001b[0m \u001b[0mtrialno\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGet_StochasticReturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrialno\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrfr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0massetvol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtimeunit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0melsreturn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdatelist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontractdates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterminationdates\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1016\\2476800888.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, maxno, rfr, assetvol, timeunit, elsreturn, datelist, contractdates, terminationdates)\u001b[0m\n\u001b[0;32m    178\u001b[0m                     \u001b[1;31m# 재평가일자에 해당되고, 마지막 이전의 재평가일자일 경우\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[1;36m5\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mstep\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEarly_PaymentDate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mterminationdates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m                         \u001b[0mstep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEarly_PaymentDate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mterminationdates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m                         \u001b[1;31m# 조기상환 조건충종할 경우\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 182\u001b[1;33m                         \u001b[1;32mif\u001b[0m \u001b[0mcurvalue\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEarly_PaymentPrice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbasevalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    183\u001b[0m                             \u001b[0mfv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmaxreturn\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mbasevalue\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbasevalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    184\u001b[0m                             \u001b[0mpv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGet_CurrentValue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrfr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    185\u001b[0m                             \u001b[1;31m# 원금 + 연 5.01% 수익 받고 해당 시뮬레이션 종료\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\ProgramData\\anaconda3\\envs\\finance\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1578\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1579\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mNoReturn\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1580\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m   1581\u001b[0m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1582\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1583\u001b[0m         )\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
-     ]
-    }
-   ],
-   "source": [
-    "els = SNP500ELS001(\"^GSPC\", \"XNYS\")\n",
-    "contractdates = [\"2023-11-27\", \"2026-12-04\"]\n",
-    "datadates = [\"2007-06-01\", \"2009-06-30\"]\n",
-    "assetvol = els.Get_Variance(datadates[0], datadates[1])\n",
-    "datelist = els.Get_TimeUnit(contractdates[0], contractdates[1])\n",
-    "timeunit = len(datelist)\n",
-    "basevalue = 100\n",
-    "rfr = 0.0532\n",
-    "elsreturn = 0.0501\n",
-    "terminationdates = [\"2024-06-05\", \"2024-12-04\", \"2025-06-04\", \"2025-12-04\"\\\n",
-    "                , \"2026-06-05\", \"2026-12-04\"]\n",
-    "trialno = 100\n",
-    "\n",
-    "els.Get_StochasticReturn(trialno, rfr, assetvol, timeunit, elsreturn, datelist, contractdates, terminationdates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0315dd68",
    "metadata": {},
    "outputs": [
@@ -418,24 +348,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Dongjun\\AppData\\Local\\Temp\\ipykernel_1016\\2476800888.py:18: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "C:\\Users\\Dongjun\\AppData\\Local\\Temp\\ipykernel_27848\\3237762215.py:18: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  asset_price = yf.download(self.ticker, start=startdate, end=enddate)\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "c:\\ProgramData\\anaconda3\\envs\\finance\\lib\\site-packages\\numpy\\_core\\fromnumeric.py:4062: FutureWarning: The behavior of DataFrame.std with axis=None is deprecated, in a future version this will reduce over both axes and return a scalar. To retain the old behavior, pass axis=0 (or do not pass axis)\n",
-      "  return std(axis=axis, dtype=dtype, out=out, ddof=ddof, **kwargs)\n"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1016\\3437597596.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m     terminationdates = [\"2024-06-05\", \"2024-12-04\", \"2025-06-04\", \"2025-12-04\"\\\n\u001b[0;32m     12\u001b[0m                     , \"2026-06-05\", \"2026-12-04\"]\n\u001b[0;32m     13\u001b[0m     \u001b[0mtrialno\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     totdf, return_df = els.Get_StochasticReturn(trialno, rfr, assetvol, timeunit,\\\n\u001b[0m\u001b[0;32m     16\u001b[0m                                                  elsreturn, datelist, contractdates, terminationdates)\n\u001b[0;32m     17\u001b[0m     \u001b[0mmeandf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"RETURN\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"TOTVALUE\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"CURRENTVALUE\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"DURATION\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmeandf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1016\\2476800888.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, maxno, rfr, assetvol, timeunit, elsreturn, datelist, contractdates, terminationdates)\u001b[0m\n\u001b[0;32m    178\u001b[0m                     \u001b[1;31m# 재평가일자에 해당되고, 마지막 이전의 재평가일자일 경우\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[1;36m5\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mstep\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEarly_PaymentDate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mterminationdates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m                         \u001b[0mstep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEarly_PaymentDate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mterminationdates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m                         \u001b[1;31m# 조기상환 조건충종할 경우\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 182\u001b[1;33m                         \u001b[1;32mif\u001b[0m \u001b[0mcurvalue\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEarly_PaymentPrice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbasevalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    183\u001b[0m                             \u001b[0mfv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmaxreturn\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mbasevalue\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbasevalue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    184\u001b[0m                             \u001b[0mpv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGet_CurrentValue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrfr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    185\u001b[0m                             \u001b[1;31m# 원금 + 연 5.01% 수익 받고 해당 시뮬레이션 종료\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\ProgramData\\anaconda3\\envs\\finance\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1578\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mfinal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1579\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mNoReturn\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1580\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m   1581\u001b[0m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1582\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1583\u001b[0m         )\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   RETURN TOTVALUE CURRENTVALUE  DURATION\n",
+      "0  0.0501  102.505    99.690728  0.523288\n"
      ]
     }
    ],
