updated crawling script with codex

--- a/ELS pricing.ipynb
+++ b/ELS pricing.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "05be1848",
-   "metadata": {},
-   "source": [
-    "변동성 구하고자 S&P의 표준편차 계산"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "61bd0757",
@@ -300,6 +292,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05be1848",
+   "metadata": {},
+   "source": [
+    "변동성 구하고자 S&P의 표준편차 계산"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "fa7fe574",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fd955955",
    "metadata": {},
    "outputs": [],
@@ -375,13 +375,12 @@
     "        self.ticker = ticker\n",
     "        self.cal = calendar\n",
     "\n",
-    "    # Get_Variance 함수 설정\n",
     "    def Get_Variance(self, startdate: str, enddate: str):\n",
-    "        # 아래 시작일과 종료일 입력받아서 종가 데이터 입수\n",
+    "        # 아래 시작일과 종료일로 데이터 다운로드\n",
     "        asset_price = yf.download(self.ticker, start=startdate, end=enddate)\n",
-    "        # 종가 데이터를 통한 일일 변화율 산출(dropna 로 null 값 제거)\n",
+    "        # 종가 데이터를 통한 일일 변화율 산출, squeeze()로 series로 변환\n",
     "        asset_returns = asset_price[\"Close\"].squeeze().pct_change().dropna()\n",
-    "        # 변화율 데이터를 이용한 표준편차 계산\n",
+    "        # 변화율 데이터로 표준편차 계산 (scaling)\n",
     "        asset_vol = np.std(asset_returns)\n",
     "        return asset_vol\n",
     "    \n",
@@ -577,7 +576,7 @@
     "                totdf = pd.merge(totdf, subdf, on=\"DATE\")\n",
     "            # asset_fin_result에 시뮬레이션 결과 요약을 추가하기(row 추가) \n",
     "            asset_fin_result.append(asset_result)\n",
-    "        return_df = pd.DataFrame(data=asset_fin_result, columns=columns_return)\n",
+    "        return_df = pd.DataFrame(data=asset_fin_result, columns=columns_return)  # 이게 최종 결과\n",
     "        return totdf, return_df"
    ]
   },
@@ -633,10 +632,10 @@
    "id": "a057d9e7",
    "metadata": {},
    "source": [
-    "현재가치 99, duration 0.5으로 6개월\n",
-    "고작 5%지급하니 현재가치 낮은 것\n",
-    "기초자산 변동성 낮은 거 가져와서 조기상환\n",
-    "좋은 상품은 아닐지도"
+    "현재가치 99, duration 0.5으로 6개월  \n",
+    "고작 5%지급하니 현재가치 낮은 것  \n",
+    "기초자산 변동성 낮은 거 가져와서 조기상환  \n",
+    "좋은 상품은 아닐지도  "
    ]
   }
  ],
