--- a/ELS pricing.ipynb
+++ b/ELS pricing.ipynb
@@ -375,6 +375,7 @@
     "        self.ticker = ticker\n",
     "        self.cal = calendar\n",
     "\n",
+    "\n",
     "    def Get_Variance(self, startdate: str, enddate: str):\n",
     "        # 아래 시작일과 종료일로 데이터 다운로드\n",
     "        asset_price = yf.download(self.ticker, start=startdate, end=enddate)\n",
@@ -387,9 +388,8 @@
     "    def Get_TimeUnit(self, startdate: str, enddate: str):\n",
     "    \t# calname 이라는 달력 인스턴스 생성\n",
     "        calname = mcal.get_calendar(self.cal)\n",
-    "        # 문자열로 받은 시작일을 날짜형식으로 type 변경\n",
+    "        # 문자열로 받은 시작일, 종료일을 날짜형식으로 파싱\n",
     "        stdate = datetime.strptime(startdate, \"%Y-%m-%d\")\n",
-    "        # 문자열로 받은 종료일을 날짜형식으로 type 변경\n",
     "        eddate = datetime.strptime(enddate, \"%Y-%m-%d\")\n",
     "        # 뉴욕 영업일 데이터에서 시작일~ 종료일 사이의 영업일 목록을 만들기\n",
     "        schedule = calname.valid_days(start_date=stdate, end_date=eddate)\n",
@@ -400,7 +400,7 @@
     "        # 날짜 리스트 return\n",
     "        return datelist\n",
     "    \n",
-    "    # curvalue: 현재주가, rfr: 무위험수익률, asset_vol: 자산변동성, timeunit: 시간단위\n",
+    "    # currentvalue: 현재주가, rfr: 무위험수익률, asset_vol: 자산변동성, timeunit: 시간단위\n",
     "    # 변수로 받는 함수\n",
     "    def GeometricBrownianMotion(self, currentvalue: float, rfr: float, asset_vol: float, timeunit: float):\n",
     "        z = np.random.randn()\n",
@@ -410,7 +410,7 @@
     "                    + asset_vol*np.sqrt(delta_t)*z)\n",
     "        return nextvalue\n",
     "    \n",
-    "         # 주가경로를 최종적으로 만들어내는 함수\n",
+    "    # 주가경로를 최종적으로 만들어내는 함수\n",
     "    def Get_StochasticStockProcess(self, maxno: int, rfr: int, assetvol: float, timeunit: int, datelist):\n",
     "        # 빈 데이터프레임 만들기: 단위 데이터 프레임을 합칠 전체 데이터 프레임\n",
     "        totdf = pd.DataFrame()\n",
@@ -449,6 +449,7 @@
     "        return totdf\n",
     "    \n",
     "    \n",
+    "\n",
     "    def Early_PaymentDate(self, datelist: list, step: int, curdate: datetime):\n",
     "    # step 이 0 일 때 현재일자가 평가일자 리스트의 첫번째 날짜보다 같거나 크면 step 1 반환\n",
     "        if step == 0 and curdate >= datetime.strptime(datelist[0], \"%Y-%m-%d\"):\n",
@@ -498,11 +499,15 @@
     "            price = basevalue * 0.65\n",
     "        return price\n",
     "\n",
+    "\n",
+    "\n",
     "    def Get_CurrentValue(self, discountrate: int, duration: int, futurevalue: int):\n",
     "        # 미래가치 * exp(-할인율 * 투자기간(일수)/365 ) \n",
     "        currentvalue = futurevalue * np.exp(-discountrate*duration/365)\n",
     "        # 현재가치 반환\n",
     "        return currentvalue\n",
+    "    \n",
+    "\n",
     "    \n",
     "    # Get_StochasticReturn 함수는 maxno로 시뮬레이션 횟수, rfr로 현재가치화 하는 금리, assetvol 로 \n",
     "    # 기초자산 변동성, timeunit으로 시간단위, elsreturn으로 els 수익률, datelist로 영업일 list\n",
